Fix for broken css tests...

--- a/test/fixtures/LicenseFont.css
+++ b/test/fixtures/LicenseFont.css
@@ -1,6 +1,6 @@
 /* LICENSE: A super secret license */
 @font-face {
-  font-family: 'LicenseFont';
+  font-family: 'LicenseFont', Helvetica, Arial, sans-serif;
   src: url('./LicenseFont.eot');
   src: local('☺'),
        url('./LicenseFont.eot?iefix') format('eot'), 
